--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,45 @@
-# Logs
-logs
-*.log
+# macOS
+.DS_Store
+
+# Node.js
+node_modules
+dist
+dist-ssr
+
+# Local environment files
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-.DS_Store
-dist
-dist-ssr
-coverage
-*.local
-
-/cypress/videos/
-/cypress/screenshots/
-
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+!.vscode/extensions.json
 
+# Logs
+logs
+*.log
+
+# Cypress
+/cypress/videos/
+/cypress/screenshots/
+
+# TypeScript
 *.tsbuildinfo
+
+# Coverage
+coverage
+
+# Local configurations
+*.local
