--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "pinia": "^2.3.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
